# platform_layer

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
kubernetes/: apps.py  models.py  views.py
kubernetes/migrations/: 0001_initial.py
kubernetes/templates/clusters/: index.html
platform_layer/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
platform_layer/platform_layer/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  cluster_sidebar.html  empty.html  header.html
