[tool.poetry]
name = "playform-layer"
version = "0.1.0"
description = "A fancy way to create cloud resources :D"
authors = ["Norman Santiago <nsantiago2719@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pyhelm = "^2.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
